# migratation_repo

./: MANIFEST.in  README.rst  azure-pipelines.yml  pyproject.toml  setup.cfg
django_polls.egg-info/: PKG-INFO  SOURCES.txt
polls/: middleware.py  views.py
polls.egg-info/: PKG-INFO  SOURCES.txt
