[metadata]
name = django-polls
version = 1.0
author = JK
author_email = jk@gmail.com
maintainer = JK
maintainer_email = jk@gmail.com
description = "testing "
long_description = file:README.rst
long_description_content_type = 'text   '
url = http://localhost:8000
license = MIT
keywords = django demo
classifiers =
    Environment :: Web Environment
    Framework :: Django

[options]
include_package_data = true
packages = find: