[metadata]
name = "polls"
authors = [{name = "jyoti", email = "you@yourdomain.com"},]
description = "Python package developer's polls (using pyproject.toml)."
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
        ]

[options]
packages = find: